--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -6,4 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".ui.CreatePostActivity">
 
+    <EditText
+        android:id="@+id/postEditText"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/post_edit_text_bg"
+        android:gravity="top"
+        android:hint="Write something here.."
+        android:padding="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/postEditText"
+        android:text="Post"
+        android:id="@+id/postButton"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
